# ffmpeg_studing

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  decode_ffmpeg.cpp  ffmpeg  frame_handler.cpp  frame_handler.h  histogramm.cpp  histogramm.h  main.cpp
decoder/: decode_ffmpeg.cpp  decode_ffmpeg.h
utils/: bgr_histogramm.cpp  bgr_histogramm.h  frame_handler.cpp  frame_handler.h  gray_histogramm.cpp  gray_histogramm.h  histogramm.cpp  histogramm.h
